k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: techimera
  labels:
    name: techimera
