k8s/backend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: techimera
spec:
  template:
    metadata:
      name: backend
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: luksamuk/techimera:0.2.0
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
            - containerPort: 4005
          resources:
            requests:
              cpu: 500m
  replicas: 2
  selector:
    matchLabels:
      app: backend
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: techimera
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - name: "http"
      port: 9000
      nodePort: 30000
    - name: "swank"
      port: 4005
      nodePort: 30001
