k8s/pgadmin.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: techimera
spec:
  template:
    metadata:
      name: pgadmin
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin-container
          image: dpage/pgadmin4:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: pgadmin
          volumeMounts:
            - name: pgadmin-config
              mountPath: /pgadmin4/servers.json
              subPath: servers.json
              readOnly: true
            - name: pgadmin-data
              mountPath: /var/lib/pgadmin
      volumes:
        - name: pgadmin-config
          configMap:
            name: pgadmin-configmap
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: pgadmin-pvc
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: techimera
spec:
  type: NodePort
  selector:
    app: pgadmin
  ports:
    - name: "app"
      port: 80
      nodePort: 30002
