k8s/postgresql.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-deployment
  namespace: techimera
spec:
  template:
    metadata:
      name: postgresql
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql-container
          image: postgres:14-alpine
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresql-pv
            - mountPath: /docker-entrypoint-initdb.d/
              name: postgresql-init-pv
          ports:
            - containerPort: 5432
      volumes:
        - name: postgresql-pv
          persistentVolumeClaim:
            claimName: postgresql-pvc
        - name: postgresql-init-pv
          configMap:
            name: postgresql-init-configmap
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: techimera
spec:
  type: ClusterIP
  selector:
    app: postgresql
  ports:
    - port: 5432
