k8s/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: techimera-ingress-middleware
  namespace: techimera
spec:
  replacePathRegex:
    regex: ^/techimera/(.*)
    replacement: /$1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: techimera-ingress
  namespace: techimera
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: techimera-techimera-ingress-middleware@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /techimera
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 4000
